<resources>
    <string name="app_name">FindMySeat <font fgcolor='#FFab1f23'>Carleton</font></string>
    <string name="app_nickname">FindMySeat</string>
    <string name="settingsDesc">Settings Button</string>
    <string name="homeDesc">Home Button</string>
    <string name="profileDesc">Profile Button</string>
    <string name="updateDesc">Update Button</string>
    <string name="findDesc">Find Button</string>
    <string name="seatAmountOneDesc">One Chair Button</string>
    <string name="seatAmountTwoDesc">Two Chairs Button</string>
    <string name="seatAmountThreeDesc">Three Chairs Button</string>
    <string name="seatAmountFourDesc">Four Chairs Button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="username">Username</string>
    <string name="your_username">Your username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email Address</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_email">Change Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="submit">Submit</string>
    <string name="credits">Chair icon made by Smashicons (https://smashicons.com/) from www.flaticon.com\n\nGender Neutral User from www.icons8.com\n\nCog Wheel from www.icons8.com</string>
    <string name="select_winner">Select Winner and Email</string>
    <string name="reset_entries">Reset Entries</string>

    <!-- Error messages -->
    <string name="username_length_error">Username must be between 5&#8211;25 characters</string>
    <string name="username_already_taken_error">Username already taken</string>
    <string name="password_not_match_error">Passwords do not match</string>
    <string name="password_length_error">Password must be between 5&#8211;25 characters</string>
    <string name="emails_not_match_error">Emails do not match</string>
    <string name="email_not_valid_error">Email is not a valid email</string>
    <string name="email_already_taken_error">Email already taken</string>
    <string name="old_password_no_match_error">Password is incorrect</string>
</resources>
