<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SeatAmountFragment"
    android:background="@color/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/seatAmountOneDesc"
            android:src="@drawable/one_chair"
            android:background="@color/buttonPrimary"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="24dp"/>

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/seatAmountTwoDesc"
            android:src="@drawable/two_chair"
            android:background="@color/buttonPrimary"
            android:layout_marginBottom="8dp"/>

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/seatAmountThreeDesc"
            android:src="@drawable/three_chair"
            android:background="@color/buttonPrimary"
            android:layout_marginBottom="8dp"/>

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/seatAmountFourDesc"
            android:src="@drawable/four_chair"
            android:background="@color/buttonPrimary"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>