<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    tools:context=".View.RegisterFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha=".65"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/rounded_button"
                android:text="@string/register"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/confirmEmailEditText" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@+id/usernameErrorText" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/usernameEditText"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/confirm_password"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/confirmPasswordEditText"
                app:layout_constraintTop_toBottomOf="@+id/passwordErrorText" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/confirmEmailEditText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/confirm_email"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/emailEditText"
                app:layout_constraintTop_toBottomOf="@+id/emailErrorText" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/emailEditText"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordErrorText" />

            <TextView
                android:id="@+id/usernameErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_length_error"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/usernameEditText"
                app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/confirmPasswordErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_not_match_error"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/confirmPasswordEditText"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/confirmEmailErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emails_not_match_error"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/confirmEmailEditText"
                app:layout_constraintTop_toBottomOf="@+id/confirmEmailEditText"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/passwordErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_length_error"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/emailErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_not_valid_error"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/emailEditText"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText"
                android:visibility="gone"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>